# BioAnalyzer-TextProcessing

./: .dockerignore  Dockerfile  LICENSE  README.md
deployment/: event-handlers.yaml
src/event-handlers/: README.md  function_app.py  main.py  pyproject.toml  requirements.txt
