[project]
name = "event-handlers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-functions>=1.23.0",
    "azure-storage-blob>=12.25.1",
    "langchain>=0.3.26",
    "pdfplumber>=0.11.7",
    "sentence-transformers>=5.0.0",
    "openai~=1.102",
    "azure-core~=1.35",
    "azure-search-documents~=11.5"]
